versions/26.1.2/translated/it_it/develop/data-generation/block-models.md
---
title: Generazione di Modelli di Blocchi
description: Una guida alla generazione di modelli e stati di blocchi tramite datagen.
authors:
  - CelDaemon
  - Fellteros
  - IMB11
  - its-miroma
  - natri0
resources:
  https://www.blockbench.net/: Scarica Blockbench
  https://github.com/FabricMC/fabric/blob/1.21.11/fabric-data-generation-api-v1/src/: Test di esempio da Fabric API
  https://github.com/Fellteros/vanillablocksplus: Vanilla+ Blocks di Fellteros
  https://github.com/Fellteros/vanillavsplus: Vanilla+ Verticals di Fellteros
---

<!---->

:::info PREREQUISITI

Assicurati di aver prima completato il processo di [configurazione della datagen](./setup).

:::

## Configurazione {#setup}

Anzitutto, avremo bisogno di creare il nostro ModelProvider. Crea una classe che estenda `FabricModelProvider`. Implementa entrambi i metodi astratti: `generateBlockStateModels` e `generateItemModels`.
Infine, crea un costruttore che corrisponda a super.

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#provider

Registra questa classe nella tua `DataGeneratorEntrypoint` all'interno del metodo `onInitializeDataGenerator`.

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModDataGenerator.java#datagen_models_register

## Stati e Modelli dei Blocchi {#blockstates-and-block-models}

```java
@Override
public void generateBlockStateModels(BlockStateModelGenerator blockStateModelGenerator) {
}
```

Per i modelli dei blocchi ci concentreremo soprattutto sul metodo `generateBlockStateModels`. Nota il parametro `BlockStateModelGenerator blockStateModelGenerator` - questo oggetto sarà responsabile della generazione di tutti i file JSON.
Ecco alcuni esempi utili che puoi usare per generare i tuoi modelli desiderati:

### Cubo Intero Semplice {#simple-cube-all}

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#cube_all

Questa è la funzione usata più spesso. Essa genera un file JSON per un semplice modello `cube_all` di un blocco. Una texture viene usata per tutti e sei le facce, in questo caso useremo `steel_block`.

<<< @/reference/26.1.2/src/main/generated/assets/example-mod/models/block/steel_block.json

Essa genera anche un file JSON dei stati del blocco. Poiché non abbiamo alcuna proprietà per gli stati del blocco (per esempio Asse, Orientazione, ...), ci basta una variante che verrà usata ogni volta che il blocco è piazzato.

<<< @/reference/26.1.2/src/main/generated/assets/example-mod/blockstates/steel_block.json

<DownloadEntry visualURL="/assets/develop/data-generation/block-model/steel_block_big.png" downloadURL="/assets/develop/data-generation/block-model/steel_block.png">Texture del blocco d'acciaio</DownloadEntry>

### Singleton {#singletons}

Il metodo `registerSingleton` fornisce file JSON di modelli in base al `TexturedModel` che passi, e una singola variante di stato di blocco.

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#cube_top_for_ends

Questo metodo genererà modelli per un cubo normale, che usa il file di texture `pipe_block` per i lati e `pipe_block_top` per le facce superiore e inferiore.

<<< @/reference/26.1.2/src/main/generated/assets/example-mod/models/block/pipe_block.json

::: tip

Se non sai quale `TextureModel` dovresti scegliere, apri la classe `TexturedModel` e dai un'occhiata ai [`TextureMappings`](#using-texture-map)!

:::

<DownloadEntry visualURL="/assets/develop/data-generation/block-model/pipe_block_textures_big.png" downloadURL="/assets/develop/data-generation/block-model/pipe_block_textures.zip">Texture del blocco di tubatura</DownloadEntry>

### Pool di Texture dei Blocchi {#block-texture-pool}

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#block_texture_pool_normal

Un altro metodo utile è `registerCubeAllModelTexturePool`: definisce le texture passandoci il "blocco di base", per poi aggiungerci i "figli", che avranno le stesse texture.
In questo caso, abbiamo passato il `RUBY_BLOCK`, quindi scalini, lastra e staccionata useranno la texture `RUBY_BLOCK`.

::: warning

Genererà anche un [modello JSON per un cubo intero semplice](#simple-cube-all) per il "blocco di base" per assicurarsi che il blocco abbia un modello.

Tieni conto di questo se vuoi cambiare il modello di quel blocco in particolare, poiché causerà un errore.

:::

Puoi anche aggiungere una `BlockFamily`, che genererà modelli per tutti i suoi "figli".

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/ModBlocks.java#family_declaration

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#block_texture_pool_family

<DownloadEntry visualURL="/assets/develop/data-generation/block-model/ruby_block_big.png" downloadURL="/assets/develop/data-generation/block-model/ruby_block.png">Texture del blocco di rubino</DownloadEntry>

### Porte e Botole {#doors-and-trapdoors}

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#door_and_trapdoor

Le porte e botole funzionano un po' diversamente. Qui, dovrai creare tre nuove texture - due per la porta, e una per la botola.

1. La porta:
   - Ha due parti - la metà superiore e quella inferiore. **Ciascuna necessita di una texture propria**: in questo caso `ruby_door_top` per la metà superiore e `ruby_door_bottom` per l'inferiore.
   - Il metodo `registerDoor()` creerà modelli per tutte le orientazioni della porta, sia aperta che chiusa.
   - **Servirà anche una texture per l'oggetto!** Mettila nella cartella `assets/example-mod/textures/item/`.
2. La botola:
   - Qui ti basta una texture sola, in questo caso chiamata `ruby_trapdoor`. Verrà usata per tutti i lati.
   - Poiché il `TrapdoorBlock` ha una proprietà `FACING`, puoi usare il metodo commentato per generare file di modello con texture ruotate = la botola sarà "orientabile". Altrimenti avrà lo stesso aspetto in tutte le direzioni.

<DownloadEntry visualURL="/assets/develop/data-generation/block-model/ruby_door_trapdoor_big.png" downloadURL="/assets/develop/data-generation/block-model/ruby_door_trapdoor_textures.zip">Texture di Porta e Botola di Rubino</DownloadEntry>

## Modelli del Blocco Personalizzati {#custom-block-models}

In questa sezione creeremo i modelli per una Lastra Verticale di Quercia, con texture di un Tronco di Quercia.

Tutti gli attributi e i metodi di questa parte del tutorial sono dichiarati in una classe statica interna chiamata `CustomBlockStateModelGenerator`.

:::details Mostra `CustomBlockStateModelGenerator`

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#custom_blockstate_model_generator

:::

### Classe dei Blocchi Personalizzati {#custom-block-class}

Crea un blocco `VerticalSlab` con una proprietà `FACING` e una proprietà booleana `SINGLE`, come nel tutorial degli [Stati dei Blocchi](../blocks/blockstates). `SINGLE` indicherà se ci sono entrambe le lastre.
Poi dovresti fare override di `getOutlineShape` e `getCollisionShape`, cosicché il contorno sia renderizzato correttamente, e il blocco abbia la forma di collisione corretta.

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/custom/VerticalSlabBlock.java#custom_voxels

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/custom/VerticalSlabBlock.java#custom_collision

Fai anche override del metodo `canReplace()`, altrimenti non potresti rendere la lastra un blocco intero.

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/custom/VerticalSlabBlock.java#custom_replace

Tutto fatto! Ora puoi testare il blocco e piazzarlo nel gioco.

### Modello di Blocco Genitore {#parent-block-model}

Ora creiamo un modello di blocco genitore. Esso determinerà la dimensione, posizione nella mano o in altri slot e le coordinate `x` e `y` della texture.
Si consiglia, per questo, di usare un editor come [Blockbench](https://www.blockbench.net/) poiché crearlo manualmente è davvero faticoso. Dovrebbe avere un aspetto del genere:

<<< @/reference/26.1.2/src/main/resources/assets/example-mod/models/block/vertical_slab.json

Controlla il [formato degli stati del blocco](https://minecraft.wiki/w/Blockstates_definition_format) per maggiori informazioni.
Nota le parole chiave `#bottom`, `#top`, `#side`. Queste saranno variabili impostabili in modelli che ereditino da questo genitore:

```json
{
  "parent": "minecraft:block/cube_bottom_top",
  "textures": {
    "bottom": "minecraft:block/sandstone_bottom",
    "side": "minecraft:block/sandstone",
    "top": "minecraft:block/sandstone_top"
  }
}
```

Il valore `bottom` sostituirà il segnaposto `#bottom` eccetera. **Mettilo nella cartella `resources/assets/example-mod/models/block/`.**

### Modello Personalizzato {#custom-model}

Un'altra cosa che ci serve è un'istanza della classe `Model`. Essa rappresenterà proprio il [modello di blocco genitore](#parent-block-model) nella nostra mod.

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#custom_model

Il metodo `block()` crea un nuovo `Model`, puntando al file `vertical_slab.json` nella cartella `resources/assets/example-mod/models/block/`.
Le `TextureSlot` rappresentano i "segnaposto" (`#bottom`, `#top`, ...) come oggetti.

### Usare le Mappe di Texture {#using-texture-map}

Cosa fa `TextureMapping`? In effetti fornisce gli identificativi che puntano alle texture. Tecnicamente funziona proprio come una mappa normale - si associa un `TextureSlot` (chiave) con un `Identifier` (valore).

Puoi usare quelli vanilla, come `TextureMapping.cube()`(che associa tutti i `TextureSlot` allo stesso `Identifier`), o crearne uno nuovo, instanziando un nuovo oggetto e usando `.put()` per associare valori alle chiavi.

::: tip

`TextureMapping.cube()` associa tutti i `TextureSlot` allo stesso `Identifier`, indipendentemente dalla loro quantità!

:::

Poiché vogliamo usare le texture del Tronco di Quercia, ma abbiamo i `TextureSlot` `BOTTOM`, `TOP`, e `SIDE`, ne dovremo creare uno nuovo.

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#custom_texture_map

Le facce `bottom` e `top` useranno `oak_log_top.png`, i lati useranno `oak_log.png`.

::: warning

Tutti i `TextureSlot` nel `TextureMapping` **devono** corrispondere a tutti i `TextureSlot` nel tuo modello di blocco genitore!

:::

### Metodo `BlockModelDefinitionGenerator` Personalizzato {#custom-supplier-method}

Il `BlockModelDefinitionGenerator` contiene tutte le varianti di stato del blocco, le loro rotazioni, e altre opzioni come blocco UV.

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#custom_supplier

Anzitutto, creiamo un nuovo `BlockModelDefinitionGenerator` tramite `MultiVariantGenerator.dispatch()`.
Poi creeremo una nuova `PropertyDispatch` che contiene parametri per tutte le varianti del blocco, in questo caso `FACING` e `SINGLE`, e la passeremo nel nostro `MultiVariantGenerator`.
Puoi indicare il modello e le trasformazioni (uvlock, rotazione) da usare in `.register()`.
Per esempio:

- Linea 6: la lastra è singola, e in direzione nord, quindi useremo il modello senza ruotarlo
- Linea 9: la lastra è singola, e in direzione ovest, quindi ruoteremo il modello di 270° sull'asse Y
- Linee 10-13: le lastre sono sovrapposte (sembrano un normale tronco di quercia), e in direzione est, quindi non dobbiamo ruotarlo

### Metodo di Generazione Dati Personalizzato {#custom-datagen-method}

L'ultimo passaggio - creare effettivamente un metodo che si possa chiamare e che generi i JSON.
Ma che parametri sono necessari?

1. `BlockModelGenerators generator`, quello che abbiamo passato in `generateBlockStateModels`.
2. `Block vertSlabBlock` è il blocco di cui genereremo i JSON.
3. `Block fullBlock` - il modello usato quando la proprietà `SINGLE` è falsa = il blocco di lastre sembra un blocco intero.
4. `TextureMapping textures` definisce le texture che il modello usa effettivamente. Controlla il capitolo [Usare le Mappe di Texture](#using-texture-map).

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#custom_gen

Anzitutto, otteniamo l'`Identifier` del modello di lastra singola con `VERTICAL_SLAB.create()`. Poi otteniamo l'`Identifier` del modello di blocco intero con `ModelLocationUtils.getModelLocation()`.

Poi passiamo entrambi i modelli in `createVerticalSlabBlockStates`, che viene ancora passato nel consumer di `blockStateOutput`, che genera i file JSON per i modelli.

Infine, creiamo un modello per l'oggetto di lastra verticale con `BlockModelGenerators.registerSimpleItemModel()`.

È tutto! Tutto ciò che rimane da fare è chiamare il metodo nel nostro `ModelProvider`:

<<< @/reference/26.1.2/src/client/java/com/example/docs/datagen/ExampleModModelProvider.java#custom_method_call
